syntax = "proto3";
package com.tim.common.protos;
option java_outer_classname = "Common";

enum Code {
  SUCCESS = 0;
  FAIL = 1;
}

// 会话类型
enum ConverType {
  SINGLE = 0;
  GROUP = 1;
}

// 消息内容
message MessageContent {
  uint64 id = 1; // 消息ID
  string uid = 2; // 发送方uid
  MessageType type = 3;
  string content = 4; // 内容
  uint64 time = 5; // 消息时间
}

// 消息类型
enum MessageType {
  TEXT = 0;
  PICTURE = 1;
  VOICE = 2;
  VIDEO = 3;
}